--- a/index.html
+++ b/index.html
@@ -24,6 +24,93 @@
 
         </nav>
     </header>
+<!-- Our main hero section start here -->
+<main>
+    <section class="section-hero section">
+      <div class="container grid grid-two-column">
+        <div class="section-hero-data">
+          <p class="hero-top-data">this is me</p>
+          <h1 class="hero-heading">Shabbir Technical</h1>
+          <p class="hero-para">
+            I'm Lotifur Shabbir. A Full stack Developer, youtuber and
+            freelancer. A Full stack Developer, youtuber and freelancer.
+          </p>
+          <div>
+            <a href="#" class="btn hireme-btn">Hire me</a>
+          </div>
+        </div>
+        <!-- hero section right side -->
+        <div class="section-hero-image">
+          <!-- <picture>
+            <source srcset="images/hero.webp" type="image/webp" />
+            <source srcset="images/hero-min.jpg" type="image/jpg" /> -->
+            <img
+              src="images/hero.jpg"
+              alt="this is me thapa technical"
+              class="hero-img"
+            />
+          <!-- </picture> -->
+        </div>
+      </div>
+    </section>
+  </main>
+
+  <!-- our bio-data section  -->
+
+  <section class="section-biodata section">
+    <div class="container grid grid-two-column">
+      <div class="bio-image">
+        <img src="images/biodata.jpg" alt="my bio-data image">
+      </div>
+      <!-- bio right side data -->
+      <div class="bio-data">
+        <h2 class="common-heading">My Bio-Data</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic consectetur, sint reiciendis esse ipsam nemo dolorum consequuntur, odio ab aliquam impedit harum eligendi architecto similique exercitationem voluptates porro minima illo.</p>
+        <br>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci fugit maxime aliquam fuga?</p>
+        <div class="bio-data-stats">
+          <div class="bio-stats">
+            <h3>Design</h3>
+            <div class="bio-progress-bar">
+              <span>80%</span>
+            </div>
+          </div>
+          <div class="bio-stats">
+            <h3>HTML</h3>
+            <div class="bio-progress-bar bio-progress-2">
+              <span>99%</span>
+            </div>
+          </div>
+          <div class="bio-stats">
+            <h3>CSS</h3>
+            <div class="bio-progress-bar bio-progress-3">
+              <span>90%</span>
+            </div>
+          </div>
+          <div class="bio-stats">
+            <h3>JavaScript</h3>
+            <div class="bio-progress-bar bio-progress-4">
+              <span>85%</span>
+            </div>
+          </div>
+          <div class="bio-stats">
+            <h3>MERN</h3>
+            <div class="bio-progress-bar bio-progress-5">
+              <span>70%</span>
+            </div>
+          </div>
+
+        </div>
+
+        <div class="bio-data-btn">
+          <a href="#" class="btn">Download CV</a>
+        </div>
+
+
+      </div>
+    </div>
+    </section>
+
 </body>
 
 </html>
