bio-section-complete

--- a/index.html
+++ b/index.html
@@ -2,30 +2,30 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Personal Website</title>
-    <link rel="stylesheet" href="css/style.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Personal Website</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-    <header class="header">
-        <img src="images/logo.png" alt="our main logo" class="logo">
+  <header class="header">
+    <img src="images/logo.png" alt="our main logo" class="logo">
 
-        <nav class="navbar">
-            <ul class="navbar-lists">
-                <li><a href="#" class="navbar-link home-link">Home</a></li>
-                <li><a href="#" class="navbar-link about-link">About </a></li>
-                <li><a href="#" class="navbar-link services-link">Services</a></li>
-                <li><a href="#" class="navbar-link portfolio-link">Portfolio</a></li>
-                <li><a href="#" class="navbar-link contact-link">Contact</a></li>
-            </ul>
+    <nav class="navbar">
+      <ul class="navbar-lists">
+        <li><a href="#" class="navbar-link home-link">Home</a></li>
+        <li><a href="#" class="navbar-link about-link">About </a></li>
+        <li><a href="#" class="navbar-link services-link">Services</a></li>
+        <li><a href="#" class="navbar-link portfolio-link">Portfolio</a></li>
+        <li><a href="#" class="navbar-link contact-link">Contact</a></li>
+      </ul>
 
-        </nav>
-    </header>
-<!-- Our main hero section start here -->
-<main>
+    </nav>
+  </header>
+  <!-- Our main hero section start here -->
+  <main>
     <section class="section-hero section">
       <div class="container grid grid-two-column">
         <div class="section-hero-data">
@@ -44,11 +44,7 @@
           <!-- <picture>
             <source srcset="images/hero.webp" type="image/webp" />
             <source srcset="images/hero-min.jpg" type="image/jpg" /> -->
-            <img
-              src="images/hero.jpg"
-              alt="this is me thapa technical"
-              class="hero-img"
-            />
+          <img src="images/hero.jpg" alt="this is me thapa technical" class="hero-img" />
           <!-- </picture> -->
         </div>
       </div>
@@ -65,7 +61,9 @@
       <!-- bio right side data -->
       <div class="bio-data">
         <h2 class="common-heading">My Bio-Data</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic consectetur, sint reiciendis esse ipsam nemo dolorum consequuntur, odio ab aliquam impedit harum eligendi architecto similique exercitationem voluptates porro minima illo.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic consectetur, sint reiciendis esse ipsam nemo
+          dolorum consequuntur, odio ab aliquam impedit harum eligendi architecto similique exercitationem voluptates
+          porro minima illo.</p>
         <br>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci fugit maxime aliquam fuga?</p>
         <div class="bio-data-stats">
@@ -106,10 +104,10 @@
           <a href="#" class="btn">Download CV</a>
         </div>
 
-
+        
       </div>
     </div>
-    </section>
+  </section>
 
 </body>
 
