--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <div class="container grid grid-two-column">
         <div class="section-hero-data">
           <p class="hero-top-data">this is me</p>
-          <h1 class="hero-heading">Shabbir Technical</h1>
+          <h1 class="hero-heading">Lotifur Shabbir</h1>
           <p class="hero-para">
             I'm Lotifur Shabbir. A Full stack Developer, youtuber and
             freelancer. A Full stack Developer, youtuber and freelancer.
@@ -101,13 +101,82 @@
         </div>
 
         <div class="bio-data-btn">
-          <a href="#" class="btn">Download CV</a>
+          <a href="https://tinyurl.com/5b7fcb89" target="_blank" class="btn">Download CV</a>
         </div>
 
         
       </div>
     </div>
   </section>
+
+  <!-- ======================================== 
+          Our portfolio Section Start  
+    ======================================== -->
+    <section class="section section-portfolio" id="portfolio-section">
+      <div class="container">
+        <h2 class="common-heading">Latest Works</h2>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quidem ex
+          eos commodi provident tempore possimus, mollitia vero quas.
+        </p>
+      </div>
+
+      <div class="p-btns">
+        <div class="btn p-btn" data-btn-num="1">Website</div>
+        <div class="btn p-btn" data-btn-num="2">Youtube</div>
+        <div class="btn p-btn" data-btn-num="3">Design</div>
+      </div>
+
+      <div class="container grid grid-three-column portfolio-images">
+        <div class="img-overlay p-btn--1">
+          <img src="images/folio/1.jpg" alt="my works" />
+          <div class="overlay">
+            <a
+              href="http://charcounter.thapaonlineclass.com/"
+              target="_thapa"
+              class="common-heading"
+              >Project 1</a>
+          </div>
+        </div>
+
+        <div class="img-overlay p-btn--3">
+          <img src="images/folio/4.jpg" alt="my works" />
+          <div class="overlay">
+            <a
+              href="http://charcounter.thapaonlineclass.com/"
+              target="_thapa"
+              class="common-heading"
+              >Project 2
+            </a>
+          </div>
+        </div>
+
+        <div class="img-overlay p-btn--1">
+          <img src="images/folio/3.jpg" alt="portfolio images " />
+          <div class="overlay">
+            <a href="" target="_blank" class="common-heading">Project 3</a>
+          </div>
+        </div>
+        <div class="img-overlay p-btn--1 p-btn--2">
+          <img src="images/folio/4.jpg" alt="portfolio images " />
+          <div class="overlay">
+            <a href="" target="_blank" class="common-heading">Project 4</a>
+          </div>
+        </div>
+        <div class="img-overlay p-btn--2">
+          <img src="images/folio/5.jpg" alt="portfolio images " />
+          <div class="overlay">
+            <a href="" target="_blank" class="common-heading">Project 5</a>
+          </div>
+        </div>
+        <div class="img-overlay p-btn--2">
+          <img src="images/folio/5.jpg" alt="portfolio images " />
+          <div class="overlay">
+            <a href="" target="_blank" class="common-heading">Project 6</a>
+          </div>
+        </div>
+      </div>
+    </section>
 
 </body>
 
