freelacing section done

--- a/index.html
+++ b/index.html
@@ -452,6 +452,24 @@
     </div>
   </section>
 
+  <!-- ======================================== 
+          Our Freelancing  Section Start  
+    ========================================  -->
+
+
+  <section class="section section-freelancing">
+    <div class="overlay"></div>
+    <div class="container">
+      <h2>I am <span>available</span> for freelancing</h2>
+      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eum voluptates similique nulla vitae natus</p>
+      <a href="/contact.html" class="btn">HIRE ME</a>
+    </div>
+  </section>
+
+
+
+
+
   <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
 </body>
 
