--- a/index.html
+++ b/index.html
@@ -466,6 +466,45 @@
     </div>
   </section>
 
+  <!-- ======================================== 
+          Our Freelancing  Section Start  
+    ========================================  -->
+
+  <section class="section section-contact">
+    <div class="container">
+      <h2 class="common-heading">Contact Us</h2>
+    </div>
+
+    <div class="section-contact-main contact-container">
+      <form action="#">
+        <div class="grid grid-two-column">
+          <div>
+            <label for="username"></label>
+            <input type="text" name="username" placeholder="Username" id="username">
+          </div>
+          <div>
+            <label for="email"></label>
+            <input type="text" name="email" placeholder="example@gmail.com" id="email">
+          </div>
+        </div>
+
+        <div>
+          <label for="subject"></label>
+          <input type="text" name="subject" id="subject" placeholder="subject">
+        </div>
+
+        <div>
+          <label for="textarea"></label>
+          <textarea name="textarea" id="textarea" cols="30" rows="10"></textarea>
+        </div>
+
+        <div>
+          <input type="submit" name="submit" id="submit" class="btn">
+        </div>
+      </form>
+    </div>
+  </section>
+
 
 
 
