footer section part-1 done

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
   <header class="header">
-    <img src="images/logo.png" alt="our main logo" class="logo">
+    <img src="images/logos.jpg" alt="our main logo" class="logo">
 
     <nav class="navbar">
       <ul class="navbar-lists">
@@ -490,7 +490,7 @@
 
         <div>
           <label for="subject"></label>
-          <input type="text" name="subject" id="subject" placeholder="subject">
+          <input type="text" name="subject" id="subject" placeholder="Subject">
         </div>
 
         <div>
@@ -499,13 +499,114 @@
         </div>
 
         <div>
-          <input type="submit" name="submit" id="submit" class="btn">
+          <input type="submit" name="submit" id="submit" class="btn" value="Send Massege">
         </div>
       </form>
     </div>
   </section>
 
 
+  <!-- ======================================== 
+          Our Footer  Section Start  
+    ========================================  -->
+
+    <footer class="footer">
+      <div class="container grid grid-four-column">
+        <div class="f-about">
+          <h3>About</h3>
+          <p>We have tested a number of registry fix and clean utilities and present our top 3 list on our site for your convenience. Hope you like it.</p>
+        </div>
+        <!-- end -->
+        <div class="f-links">
+          <h3>links</h3>
+          <ul>
+            <li><span><ion-icon name="arrow-forward-outline"></ion-icon></span><a href="#">Home</a>
+            </li>
+
+            <li><span><ion-icon name="arrow-forward-outline"></ion-icon></span><a href="#">About</a>
+            </li>
+
+            <li><span><ion-icon name="arrow-forward-outline"></ion-icon></span><a href="#">Services</a>
+            </li>
+
+            <li><span><ion-icon name="arrow-forward-outline"></ion-icon></span><a href="#">Portfolio</a>
+            </li>
+
+            <li><span><ion-icon name="arrow-forward-outline"></ion-icon></span><a href="#">Contact</a>
+            </li>
+          </ul>
+        </div>
+        <!-- end  -->
+        <div class="f-services">
+          <h3>Services</h3>
+          <ul>
+            <li><span><ion-icon name="arrow-forward-outline"></ion-icon></span><a href="#">Web Design</a>
+            </li>
+
+            <li><span><ion-icon name="arrow-forward-outline"></ion-icon></span><a href="#">Web Development</a>
+            </li>
+
+            <li><span><ion-icon name="arrow-forward-outline"></ion-icon></span><a href="#">Mern Project</a>
+            </li>
+
+            <li><span><ion-icon name="arrow-forward-outline"></ion-icon></span><a href="#">Online Classes</a>
+            </li>
+
+            <li><span><ion-icon name="arrow-forward-outline"></ion-icon></span><a href="#">Youtube Course</a>
+            </li>
+          </ul>
+        </div>
+        <!-- end  -->
+        <div class="f-address">
+          <h3>Have a Questions?</h3>
+          <address>
+            <div>
+              <p>
+                <span><ion-icon name="location-outline"></ion-icon></span>
+                Dhaka, Bangladesh
+              </p>
+            </div>
+
+            <div>
+              <p>
+                <span><ion-icon name="call-outline"></ion-icon></span>
+                <a href="tel:+88012345678">+880 12345678</a>
+              </p>
+            </div>
+
+            <div>
+              <p>
+                <span><ion-icon name="mail-outline"></ion-icon></span>
+                <a href="mailto:lotifurshabbir54@gmail.com">lotifurshabbir54@gmail.com</a>
+              </p>
+            </div>
+
+          </address>
+        </div>
+        <!-- end  -->
+      </div>
+
+
+      <div class="container">
+        <div class="f-social-icons">
+          <a href="https://www.facebook.com/golirProgrammer/" target="_blank">
+            <ion-icon class="icons" name="logo-facebook"></ion-icon>
+          </a>
+
+          <a href="https://www.instagram.com/lotifur_shabbir/" target="_blank">
+            <ion-icon class="icons" name="logo-instagram"></ion-icon>
+          </a>
+
+          <a href="https://twitter.com/shabbirlotifur/" target="_blank">
+            <ion-icon class="icons" name="logo-twitter"></ion-icon>
+          </a>
+        </div>
+
+        <div class="f-credits">
+          <p>Copyright ©2022 All rights reserved | @LotifurShabbir</p>
+        </div>
+      </div>
+    </footer>
 
 
 
