fotter style resolved

--- a/index.html
+++ b/index.html
@@ -510,7 +510,7 @@
           Our Footer  Section Start  
     ========================================  -->
 
-    <footer class="footer">
+    <footer class="section section-footer">
       <div class="container grid grid-four-column">
         <div class="f-about">
           <h3>About</h3>
@@ -518,7 +518,7 @@
         </div>
         <!-- end -->
         <div class="f-links">
-          <h3>links</h3>
+          <h3>Links</h3>
           <ul>
             <li><span><ion-icon name="arrow-forward-outline"></ion-icon></span><a href="#">Home</a>
             </li>
@@ -603,7 +603,7 @@
         </div>
 
         <div class="f-credits">
-          <p>Copyright ©2022 All rights reserved | @LotifurShabbir</p>
+          <p>Copyright ©2022 All rights reserved | <a href="https://www.instagram.com/lotifur_shabbir/" class="credit" target="_blank">@LotifurShabbir</a></p>
         </div>
       </div>
     </footer>
