--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <li><a href="#" class="navbar-link home-link">Home</a></li>
         <li><a href="#" class="navbar-link about-link">About </a></li>
         <li><a href="#" class="navbar-link services-link">Services</a></li>
-        <li><a href="#" class="navbar-link portfolio-link">Portfolio</a></li>
+        <li><a href="#portfolio" class="navbar-link portfolio-link">Portfolio</a></li>
         <li><a href="#" class="navbar-link contact-link">Contact</a></li>
       </ul>
 
@@ -43,7 +43,7 @@
             freelancer. A Full stack Developer, youtuber and freelancer.
           </p>
           <div>
-            <a href="#" class="btn hireme-btn">Hire me</a>
+            <a href="#contact" class="btn hireme-btn">Hire me</a>
           </div>
         </div>
         <!-- hero section right side -->
