section nevigation and google map section done

--- a/contact.html
+++ b/contact.html
@@ -1,1 +1,203 @@
-<H1>Hi thanks for contacting me.</H1>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contact Me</title>
+    <link rel="stylesheet" href="css/style.css">
+    <script defer src="index.js"></script>
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+</head>
+
+<body>
+    <header class="header">
+        <img src="images/logos.jpg" alt="our main logo" class="logo">
+
+        <nav class="navbar">
+            <ul class="navbar-lists">
+                <li><a href="index.html" class="navbar-link home-link">Home</a></li>
+                <li><a href="about.html" class="navbar-link about-link">About </a></li>
+                <li><a href="service.html" class="navbar-link services-link">Services</a></li>
+                <li><a href="#portfolio" class="navbar-link portfolio-link">Portfolio</a></li>
+                <li><a href="#" class="navbar-link contact-link">Contact</a></li>
+            </ul>
+
+        </nav>
+    </header>
+
+    <!-- ======================================== 
+          Our Freelancing  Section Start  
+    ========================================  -->
+
+    <section class="section section-contact">
+        <div class="container">
+            <h2 class="common-heading">Contact Us</h2>
+        </div>
+
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d233667.8223924372!2d90.27923775747219!3d23.780887456211758!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755b8b087026b81%3A0x8fa563bbdd5904c2!2sDhaka!5e0!3m2!1sen!2sbd!4v1649744789409!5m2!1sen!2sbd" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+        <div class="section-contact-main contact-container">
+            <form action="#">
+                <div class="grid grid-two-column">
+                    <div>
+                        <label for="username"></label>
+                        <input type="text" name="username" placeholder="Username" id="username">
+                    </div>
+                    <div>
+                        <label for="email"></label>
+                        <input type="text" name="email" placeholder="example@gmail.com" id="email">
+                    </div>
+                </div>
+
+                <div>
+                    <label for="subject"></label>
+                    <input type="text" name="subject" id="subject" placeholder="Subject">
+                </div>
+
+                <div>
+                    <label for="textarea"></label>
+                    <textarea name="textarea" id="textarea" cols="30" rows="10"></textarea>
+                </div>
+
+                <div>
+                    <input type="submit" name="submit" id="submit" class="btn" value="Send Massege">
+                </div>
+            </form>
+        </div>
+    </section>
+
+    <!-- ======================================== 
+          Our Footer  Section Start  
+    ========================================  -->
+
+    <footer class="section section-footer">
+        <div class="container grid grid-four-column">
+            <div class="f-about">
+                <h3>About</h3>
+                <p>We have tested a number of registry fix and clean utilities and present our top 3 list on our site
+                    for your convenience. Hope you like it.</p>
+            </div>
+            <!-- end -->
+            <div class="f-links">
+                <h3>Links</h3>
+                <ul>
+                    <li><span>
+                            <ion-icon name="arrow-forward-outline"></ion-icon>
+                        </span><a href="#">Home</a>
+                    </li>
+
+                    <li><span>
+                            <ion-icon name="arrow-forward-outline"></ion-icon>
+                        </span><a href="#">About</a>
+                    </li>
+
+                    <li><span>
+                            <ion-icon name="arrow-forward-outline"></ion-icon>
+                        </span><a href="#">Services</a>
+                    </li>
+
+                    <li><span>
+                            <ion-icon name="arrow-forward-outline"></ion-icon>
+                        </span><a href="#">Portfolio</a>
+                    </li>
+
+                    <li><span>
+                            <ion-icon name="arrow-forward-outline"></ion-icon>
+                        </span><a href="#">Contact</a>
+                    </li>
+                </ul>
+            </div>
+            <!-- end  -->
+            <div class="f-services">
+                <h3>Services</h3>
+                <ul>
+                    <li><span>
+                            <ion-icon name="arrow-forward-outline"></ion-icon>
+                        </span><a href="#">Web Design</a>
+                    </li>
+
+                    <li><span>
+                            <ion-icon name="arrow-forward-outline"></ion-icon>
+                        </span><a href="#">Web Development</a>
+                    </li>
+
+                    <li><span>
+                            <ion-icon name="arrow-forward-outline"></ion-icon>
+                        </span><a href="#">Mern Project</a>
+                    </li>
+
+                    <li><span>
+                            <ion-icon name="arrow-forward-outline"></ion-icon>
+                        </span><a href="#">Online Classes</a>
+                    </li>
+
+                    <li><span>
+                            <ion-icon name="arrow-forward-outline"></ion-icon>
+                        </span><a href="#">Youtube Course</a>
+                    </li>
+                </ul>
+            </div>
+            <!-- end  -->
+            <div class="f-address">
+                <h3>Have a Questions?</h3>
+                <address>
+                    <div>
+                        <p>
+                            <span>
+                                <ion-icon name="location-outline"></ion-icon>
+                            </span>
+                            Dhaka, Bangladesh
+                        </p>
+                    </div>
+
+                    <div>
+                        <p>
+                            <span>
+                                <ion-icon name="call-outline"></ion-icon>
+                            </span>
+                            <a href="tel:+88012345678">+880 12345678</a>
+                        </p>
+                    </div>
+
+                    <div>
+                        <p>
+                            <span>
+                                <ion-icon name="mail-outline"></ion-icon>
+                            </span>
+                            <a href="mailto:lotifurshabbir54@gmail.com">lotifurshabbir54@gmail.com</a>
+                        </p>
+                    </div>
+
+                </address>
+            </div>
+            <!-- end  -->
+        </div>
+
+
+        <div class="container">
+            <div class="f-social-icons">
+                <a href="https://www.facebook.com/golirProgrammer/" target="_blank">
+                    <ion-icon class="icons" name="logo-facebook"></ion-icon>
+                </a>
+
+                <a href="https://www.instagram.com/lotifur_shabbir/" target="_blank">
+                    <ion-icon class="icons" name="logo-instagram"></ion-icon>
+                </a>
+
+                <a href="https://twitter.com/shabbirlotifur/" target="_blank">
+                    <ion-icon class="icons" name="logo-twitter"></ion-icon>
+                </a>
+            </div>
+
+            <div class="f-credits">
+                <p>Copyright ©2022 All rights reserved | <a href="https://www.instagram.com/lotifur_shabbir/"
+                        class="credit" target="_blank">@LotifurShabbir</a></p>
+            </div>
+        </div>
+    </footer>
+</body>
+
+</html>
