--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
     <nav class="navbar">
       <ul class="navbar-lists">
         <li><a href="#" class="navbar-link home-link">Home</a></li>
-        <li><a href="#" class="navbar-link about-link">About </a></li>
-        <li><a href="#" class="navbar-link services-link">Services</a></li>
+        <li><a href="/about.html" target="_blank" class="navbar-link about-link">About </a></li>
+        <li><a href="/service.html" target="_blank" class="navbar-link services-link">Services</a></li>
         <li><a href="#portfolio" class="navbar-link portfolio-link">Portfolio</a></li>
-        <li><a href="#" class="navbar-link contact-link">Contact</a></li>
+        <li><a href="/contact.html" target="_blank" class="navbar-link contact-link" >Contact</a></li>
       </ul>
 
     </nav>
@@ -58,7 +58,9 @@
     </section>
   </main>
 
-  <!-- our bio-data section  -->
+ <!-- ======================================== 
+          Our BioData Section Start  
+    ======================================== -->
 
   <section class="section-biodata section">
     <div class="container grid grid-two-column">
@@ -295,7 +297,7 @@
           </div>
           <div class="swiper-client-data grid grid-two-column">
             <figure>
-              <img src="images/clients/a.jpg" alt="clien review">
+              <img src="images/clients/a.jpg" alt="client review">
             </figure>
             <div class="client-data-details">
               <p>Alex Paul</p>
@@ -312,25 +314,7 @@
           </div>
           <div class="swiper-client-data grid grid-two-column">
             <figure>
-              <img src="images/clients/b.jpg" alt="clien review">
-            </figure>
-            <div class="client-data-details">
-              <p>Alex Paul</p>
-              <p>Entrepreneur</p>
-            </div>
-          </div>
-
-        </div>
-        <!-- section end -->
-        <div class="swiper-slide">
-          <div class="swiper-client-msg">
-            <p>
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iusto, temporibus?
-            </p>
-          </div>
-          <div class="swiper-client-data grid grid-two-column">
-            <figure>
-              <img src="images/clients/c.jpg" alt="clien review">
+              <img src="images/clients/b.jpg" alt="client review">
             </figure>
             <div class="client-data-details">
               <p>Alex Paul</p>
@@ -348,7 +332,7 @@
           </div>
           <div class="swiper-client-data grid grid-two-column">
             <figure>
-              <img src="images/clients/d.jpg" alt="clien review">
+              <img src="images/clients/c.jpg" alt="client review">
             </figure>
             <div class="client-data-details">
               <p>Alex Paul</p>
@@ -366,7 +350,7 @@
           </div>
           <div class="swiper-client-data grid grid-two-column">
             <figure>
-              <img src="images/clients/e.jpg" alt="clien review">
+              <img src="images/clients/d.jpg" alt="client review">
             </figure>
             <div class="client-data-details">
               <p>Alex Paul</p>
@@ -384,7 +368,7 @@
           </div>
           <div class="swiper-client-data grid grid-two-column">
             <figure>
-              <img src="images/clients/f.jpg" alt="clien review">
+              <img src="images/clients/e.jpg" alt="client review">
             </figure>
             <div class="client-data-details">
               <p>Alex Paul</p>
@@ -402,7 +386,7 @@
           </div>
           <div class="swiper-client-data grid grid-two-column">
             <figure>
-              <img src="images/clients/g.jpg" alt="clien review">
+              <img src="images/clients/f.jpg" alt="client review">
             </figure>
             <div class="client-data-details">
               <p>Alex Paul</p>
@@ -420,7 +404,7 @@
           </div>
           <div class="swiper-client-data grid grid-two-column">
             <figure>
-              <img src="images/clients/h.jpg" alt="clien review">
+              <img src="images/clients/g.jpg" alt="client review">
             </figure>
             <div class="client-data-details">
               <p>Alex Paul</p>
@@ -438,7 +422,25 @@
           </div>
           <div class="swiper-client-data grid grid-two-column">
             <figure>
-              <img src="images/clients/a.jpg" alt="clien review">
+              <img src="images/clients/h.jpg" alt="client review">
+            </figure>
+            <div class="client-data-details">
+              <p>Alex Paul</p>
+              <p>Entrepreneur</p>
+            </div>
+          </div>
+
+        </div>
+        <!-- section end -->
+        <div class="swiper-slide">
+          <div class="swiper-client-msg">
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iusto, temporibus?
+            </p>
+          </div>
+          <div class="swiper-client-data grid grid-two-column">
+            <figure>
+              <img src="images/clients/a.jpg" alt="client review">
             </figure>
             <div class="client-data-details">
               <p>Alex Paul</p>
