--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </head>
 
-<body>
+<body class="sticky">
   <header class="header">
     <img src="images/logos.jpg" alt="our main logo" class="logo">
 
@@ -28,8 +28,12 @@
         <li><a href="#portfolio" class="navbar-link portfolio-link">Portfolio</a></li>
         <li><a href="/contact.html" target="_blank" class="navbar-link contact-link" >Contact</a></li>
       </ul>
-
     </nav>
+
+    <div class="mobile-navbar-btn">
+      <ion-icon name="menu-outline" class="mobile-nav-icon"></ion-icon>
+      <ion-icon name="close-outline" class="mobile-nav-icon"></ion-icon>
+    </div>
   </header>
   <!-- Our main hero section start here -->
   <main>
